--- a/StoreWeb_Server/StoreWeb_Server.csproj
+++ b/StoreWeb_Server/StoreWeb_Server.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StoreWeb.Models\StoreWeb.Models.csproj" />
+  </ItemGroup>
+
 </Project>
